--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     image: postgres:11-alpine
     container_name: postgres
     environment:
-      - POSTGRES_USER=local
       - POSTGRES_HOST_AUTH_METHOD=trust
       - POSTGRES_DB=postgres
+    env_file:
+      - .env
     volumes:
       - ./volumes/postgres/data:/var/lib/postgresql/data
       - ./volumes/python:/opt
@@ -19,6 +20,8 @@ services:
     build: "./containers/python"
     container_name: python
     command: /bin/bash -c "jupyter notebook --notebook-dir=/opt/notebooks --ip='*' --port=8888 --no-browser --allow-root"
+    env_file:
+      - .env
     volumes:
       - ./volumes/notebooks:/opt/notebooks
       - ./volumes/static:/opt/static
